@@ -19,6 +19,7 @@ VERSION 0.028
    - The test map no longer causes an error by attempting to grow mold when
      the mold flag is turned off.
    - iocurses.d no longer generates errors due to undeclared "format" calls
+   - The curses interface now uses the correct colors
 
 VERSION 0.027
 Finalized 2018-08-19 07:19 EST
